--- a/chello/package.json
+++ b/chello/package.json
@@ -17,6 +17,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
     "react-markdown": "^8.0.3",
+    "react-mentions": "^4.4.7",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "remark-gfm": "^3.0.1",
