--- a/chello/package.json
+++ b/chello/package.json
@@ -13,6 +13,7 @@
     "html-react-parser": "^3.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.0",
+    "react-big-calendar": "^1.5.0",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-icons": "^4.4.0",
